--- a/only-data.html
+++ b/only-data.html
@@ -265,12 +265,12 @@ titletexts[500]='其他';
     <p>手动检查。将鼠标悬停在颜色上以获取更多信息。</p>
     
     <p class="legend">
-<span class=“style-404”>█</span>稳定扩散不知名的艺术家<br>
-<span class=“style-304”>█</span>有些东西被识别出来，但与艺术家无关<br>
-<span class=“style-301”>█</span>已识别出某些内容，但结果差异太大<br>
-<span class=“style-205”>█</span>艺术家被识别，但很难提示/不灵活<br>
-<span class=“style-204”>█</span>艺术家已被识别，但差异太大/通用<br>
-<span class=“style-500”>█</span>其他
+<span class="style-404">█</span>稳定扩散不知名的艺术家<br>
+<span class="style-304">█</span>有些东西被识别出来，但与艺术家无关<br>
+<span class="style-301">█</span>已识别出某些内容，但结果差异太大<br>
+<span class="style-205">█</span>艺术家被识别，但很难提示/不灵活<br>
+<span class="style-204">█</span>艺术家已被识别，但差异太大/通用<br>
+<span class="style-500">█</span>其他
     </p>
 
     <div id="excludedArtists"></div>
